// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should accept base error title 1`] = `
<form
  className="form-horizontal well"
>
  <Component
    className="base in fade"
    title="Oops"
    type="danger"
  >
    <li
      key="0"
    >
      invalid something
    </li>
  </Component>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;

exports[`Form should display multiple base errors 1`] = `
<form
  className="form-horizontal well"
>
  <Component
    className="base in fade"
    title="Unable to save"
    type="danger"
  >
    <li
      key="0"
    >
      invalid something
    </li>
    <li
      key="1"
    >
      error too
    </li>
  </Component>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;

exports[`Form should display one base error 1`] = `
<form
  className="form-horizontal well"
>
  <Component
    className="base in fade"
    title="Unable to save"
    type="danger"
  >
    <li
      key="0"
    >
      invalid something
    </li>
  </Component>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;

exports[`Form should render a form 1`] = `
<form
  className="form-horizontal well"
>
  <Component
    disabled={false}
    submitting={false}
  />
</form>
`;
